# embedded_buzzer

./: README.md
buzzer_board/: Cargo.toml  README.md  rust-toolchain.toml
buzzer_board/.cargo/: config.toml
buzzer_board/src/: buffer.rs  button_task.rs  leds.rs  lib.rs  net.rs
common/: Cargo.toml
common/src/: lib.rs
server/: .gitignore  Cargo.toml  build.rs
server/assets/: audio_test.html  frontend.html  index.html  quiz.html  reaction.html  style.css
server/src/: lib.rs  net_sockets.rs  websocket.rs
server/ts/: common.ts  idMap.ts  index.ts  quiz.ts  reaction.ts  reactionGame.ts  tsconfig.json
