[package]
name = "buzzer_board"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "critical-section-single-core",
    "inline-asm",
] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "03d6363d5af5dcaf21b52734994a466ca593d2b6", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
    "integrated-timers",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "03d6363d5af5dcaf21b52734994a466ca593d2b6", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "nightly",
    "proto-ipv6",
    "tcp",
    "unstable-traits",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "03d6363d5af5dcaf21b52734994a466ca593d2b6", features = [
    "defmt",
    "exti",
    "nightly",
    "stm32h745xi-cm7",
    "time-driver-any",
    "unstable-pac",
    "unstable-traits",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "03d6363d5af5dcaf21b52734994a466ca593d2b6", features = [
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "03d6363d5af5dcaf21b52734994a466ca593d2b6", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
    "unstable-traits",
] }
embedded-io = { version = "0.4.0", features = ["async"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
