[package]
name = "buzzer_board"
version = "0.1.0"
edition = "2021"

# Use this for the rust-analyzer in VS Code:
#  "rust-analyzer.check.allTargets": false,
#  "rust-analyzer.check.extraArgs": [
#      "--target",
#      "thumbv7em-none-eabihf"
#  ],

# We require MII PHY support for the ethernet interface
[patch."https://github.com/embassy-rs/embassy.git"]
embassy-stm32 = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }
embassy-executor = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }
embassy-sync = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }
embassy-time = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }
embassy-net = { git = "https://github.com/KloolK/embassy.git", branch = "mii-phy" }

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "critical-section-single-core",
    "inline-asm",
] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
    "integrated-timers",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "nightly",
    "proto-ipv6",
    "tcp",
    "unstable-traits",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "exti",
    "nightly",
    "stm32h745xi-cm7",
    "time-driver-any",
    "unstable-pac",
    "unstable-traits",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
    "unstable-traits",
] }
embedded-io = { version = "0.4.0", features = ["async"] }
embedded-nal-async = "0.4.0"
format_no_std = "1.0.0"
heapless = "0.7.16"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand_core = "0.6.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.0"
static_cell = "1.1.0"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
