[package]
name = "buzzer_board"
version = "0.1.0"
edition = "2021"

# We require MII PHY support for the ethernet interface
[patch."https://github.com/embassy-rs/embassy.git"]
embassy-futures = { git = "https://github.com/sgasse/embassy.git", branch = "mii-phy" }
embassy-stm32 = { git = "https://github.com/sgasse/embassy.git", branch = "mii-phy" }
embassy-executor = { git = "https://github.com/sgasse/embassy.git", branch = "mii-phy" }
embassy-sync = { git = "https://github.com/sgasse/embassy.git", branch = "mii-phy" }
embassy-time = { git = "https://github.com/sgasse/embassy.git", branch = "mii-phy" }
embassy-net = { git = "https://github.com/sgasse/embassy.git", branch = "mii-phy" }

[dependencies]
common = { path = "../common" }
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "inline-asm",
] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", features = [
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
    "integrated-timers",
    "task-arena-size-8192",
    # "nightly",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv6",
    "tcp",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "exti",
    "stm32h745xi-cm7",
    "time-driver-any",
    "unstable-pac",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embedded-io = { version = "0.6.1" }
embedded-io-async = "0.6.1"
embedded-nal-async = "0.7.1"
format_no_std = "1.0.2"
futures = { version = "0.3.30", default-features = false }
heapless = "0.8"
panic-probe = { version = "0.3", features = ["print-defmt"] }
postcard = "1.0.8"
rand_core = "0.6.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
static_cell = { version = "2.0", features = ["nightly"] }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
