[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws", "tokio"] }
common = { path = "../common" }
futures-util = "0.3.28"
postcard = { version = "1.0.4", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs"] }
